remove some deprecated function calls